<resources>
    <string name="app_name">TicTacToe</string>
    <string name="welcome_to_tic_tac_toe">Welcome To Tic Tac Toe</string>
    <string name="two_players">Two Players</string>
    <string name="single_player">Single Player</string>
    <string name="two_player_game">Two Player Game</string>
    <string name="turn">Turn :</string>
    <string name="startStatus">Tap to start the game (X"s Turn)</string>
    <string name="todo">TODO</string>
</resources>