<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoPlayerActivity">

    <TextView
        android:id="@+id/twoPlayerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="casual"
        android:text="@string/two_player_game"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/grid"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status"
        app:srcCompat="@drawable/grid" />

    <TextView
        android:id="@+id/turnTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/turn"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twoPlayerTitle" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text="@string/startStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/turnTitle"
        app:layout_constraintTop_toBottomOf="@+id/twoPlayerTitle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/grid"
        app:layout_constraintEnd_toEndOf="@+id/grid"
        app:layout_constraintStart_toStartOf="@+id/grid"
        app:layout_constraintTop_toTopOf="@+id/grid">

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:onClick="playerTap"
                android:paddingRight="3dp"
                android:tag="0"
                app:srcCompat="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:onClick="playerTap"
                android:tag="1"
                app:srcCompat="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:onClick="playerTap"
                android:paddingLeft="3dp"
                android:tag="2"
                app:srcCompat="@drawable/empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:onClick="playerTap"
                android:paddingRight="3dp"
                android:tag="3"
                app:srcCompat="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:onClick="playerTap"
                android:tag="4"
                app:srcCompat="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:onClick="playerTap"
                android:paddingLeft="3dp"
                android:tag="5"
                app:srcCompat="@drawable/empty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:onClick="playerTap"
                android:paddingRight="3dp"
                android:tag="6"
                app:srcCompat="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:onClick="playerTap"
                android:tag="7"
                app:srcCompat="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:onClick="playerTap"
                android:paddingLeft="3dp"
                android:tag="8"
                app:srcCompat="@drawable/empty" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="gameReset"
        android:text="Restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>